--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Bienvenue</h1>
-    <p>Bienvenue sur ma page HTML !</p>
+    <p>Bienvenue sur mmon cv en ligne !</p>
 </body>
 </html>
