update2 de l'index html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Mon cv</title>
 </head>
 <body>
-    <h1>Bienvenue</h1>
+    <p>Nom : Melataguia Fouochong </p>
+    <p>Prenom : Bidias Urss</p>
+    <p>Date Naissance : 12/10/1998</p>
     <p>Bienvenue sur mmon cv en ligne !</p>
 </body>
 </html>
