update2 de l'index html et ajout du code css

--- a/index.html
+++ b/index.html
@@ -1,14 +1,89 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mon cv</title>
+    <title>Mon CV</title>
+    <link rel="stylesheet" type="text/css" href="cv.css">
 </head>
 <body>
-    <p>Nom : Melataguia Fouochong </p>
-    <p>Prenom : Bidias Urss</p>
-    <p>Date Naissance : 12/10/1998</p>
-    <p>Bienvenue sur mmon cv en ligne !</p>
+    <div id="header">
+        <h1>Bidias Melataguia</h1>
+        <h1>Ingénieur de Travaux Informatique</h1>
+    </div>
+
+    <div id="content">
+        <h2>Résumé</h2>
+        <p>Mon caractère est marqué par l'organisation, l'optimisme, la détermination, la flexibilité et un sourire constant.</p>
+
+        <div class="contact-info">
+            <h2>Contact</h2>
+            <p>Phone : +32 465164986</p>
+            <p>Mail : melataguiabidias@gmail.com</p>
+            <p>Linkedin :  <a href="https://www.linkedin.com/in/bidias-melataguia-199698213/" title="Visitez mon compte Linkedin">linkedin</a></p>
+            <p>Youtube :  <a href="https://www.youtube.com/@melataguiabidias5073/featured" title="Visitez mon compte Youtube">youtube</a></p>
+        </div>
+
+        <h2>Carrière</h2>
+        <ul>
+            <li>
+                <strong>PPS EU</strong>
+                <p><em><b>JUILLET 2023 jusqu'à présent</b> : Consultant en Job étudiant </em></p>
+            </li>
+            <li>
+                <strong>IL Platform</strong>
+                <p><em><b>2023</b> : Professeur et animateur pour les ateliers d'introduction aux cours d'informatique et de programmation aux enfant d'âge scolaire.</em></p>
+            </li>
+            <li>
+                <strong>Scholar ULB</strong>
+                <p><em><b>2023</b> :Tuteur scholar ULB</em></p>
+            </li>
+            <li>
+                <strong>Smart It Service Sarl</strong>
+                <p><em><b>2021-2022</b> : Develloppeur Junior </em></p>
+            </li>
+            <li>
+                <strong>Salar Sarl</strong>
+                <p><em><b>JUIN 2021</b> : Stagiaire académique</em></p>
+            </li>
+            <li>
+                <strong>Hadron S.A</strong>
+                <p><em><b>JUILLET 2020</b>Stagiaire académique</em></p>
+            </li>
+            <li>
+                <strong>OMS</strong>
+                <p><em><B>OCTOBRE 2020</B> : Enqueteur LQAS (Lot_Quality_Assurance_Sampling)</em></p>
+            </li>
+            <li>
+                <strong>Dowhile Sarl</strong>
+                <p><em><b>2018-2021</b> : Directeur Technique</em></p>
+            </li>
+            <li>
+                <strong>Smart It Service Sarl</strong>
+                <p><em><b>2017-2018</b> : Assistant en maintenance informatique</em></p>
+            </li>
+        </ul>
+
+
+        <h2>Parcours Scolaire</h2>
+<ul>
+    <li>
+        <strong>Baccalauréat Série : D.</strong>
+        <p>Collège polyvalent Aloys Tapiemene de Mbouda (2009-2017)</p>
+    </li>
+    <li>
+        <strong>Certification Google des Ateliers Numériques</strong>
+        <p> Google(2022)</p>
+    </li>
+    <li>
+        <strong>Licence en Génie Logiciel avec obtention du titre d'Ingénieur de Travaux Informatiques</strong>
+        <p>Institut Africain d'Informatique (IAI, Cameroun) (2019-2021)</p>
+    </li>
+    <li>
+        <strong>Master 2 en Sciences et Technologie de l'Information et la Communication (En cours)</strong>
+        <p>Université Libre de Bruxelles (2022-2023)</p>
+    </li>
+</ul>
+
+
+    </div>
 </body>
 </html>
