update3 de l'index html

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <h2>Parcours Scolaire</h2>
 <ul>
     <li>
-        <strong>Baccalauréat Série : D.</strong>
+        <strong>Baccalauréat Scientifique</strong>
         <p>Collège polyvalent Aloys Tapiemene de Mbouda (2009-2017)</p>
     </li>
     <li>
