update3 de l'index html

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <ul>
     <li>
         <strong>Baccalauréat Scientifique</strong>
-        <p>Collège polyvalent Aloys Tapiemene de Mbouda (2009-2017)</p>
+        <p>Collège polyvalent Aloys Tapiemene(2009-2017)</p>
     </li>
     <li>
         <strong>Certification Google des Ateliers Numériques</strong>
