--- a/index.html
+++ b/index.html
@@ -1,89 +1,130 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
-    <title>Mon CV</title>
-    <link rel="stylesheet" type="text/css" href="cv.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CV - Bidias MELATAGUIA</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="header">
-        <h1>Bidias Melataguia</h1>
-        <h1>Ingénieur de Travaux Informatique</h1>
-    </div>
+    <header>
+        <h1>Bidias MELATAGUIA</h1>
+        <p class="title">Ingénieur en Informatique et Étudiant en Master STIC</p>
+    </header>
+    <main>
+        <section class="contact-info">
+            <div class="contact-item">
+                <span class="icon"></span> Belgique
+            </div>
+            <div class="contact-item">
+                <span class="icon">☎</span> <a href="tel:+32465164986">+32465164986</a>
+            </div>
+            <div class="contact-item">
+                <span class="icon">✉</span> <a href="mailto:melataguiabidias@gmail.com">melataguiabidias@gmail.com</a>
+            </div>
+             <div class="contact-item">
+               <span class="icon"></span>  <a href="https://memoire-bidias.be/" target="_blank">https://memoire-bidias.be/</a>
+            </div>
+        </section>
+        <section class="interests">
+            <h2>Intérêts</h2>
+            <ul>
+                <li>Football</li>
+                <li>Musique</li>
+            </ul>
+        </section>
+         <section class="certifications">
+            <h2>Certifications</h2>
+            <div class="certification-item">
+                 <div class="certification-content">
+                     <h3>certification google ateliers numeriques</h3>
+                     <p>GOOGLE, 2022</p>
+                    <a href="https://grow.google/intl/fr_fr/google-career-certificates/" target="_blank">https://grow.google/intl/fr_fr/google- career-certificates/</a>
+                  </div>
+             </div>
 
-    <div id="content">
-        <h2>Résumé</h2>
-        <p>Mon caractère est marqué par l'organisation, l'optimisme, la détermination, la flexibilité et un sourire constant.</p>
+        </section>
+         <section class="languages">
+            <h2>Langues</h2>
+                <ul>
+                    <li><span>Anglais</span>: Meduim</li>
+                    <li><span>Français</span>: Native</li>
+                    <li><span>Espagnol</span>: Amateur</li>
+                    <li><span>Netherlands</span>: Beginner</li>
+                </ul>
+        </section>
+          <section class="profile">
+             <p>Organisée, optimiste, déterminée, flexible, toujours souriante. Je suis jeune et passionnée par la réussite, avec une forte envie d'apprendre, de découvrir et de relever de nouveaux défis.</p>
+        </section>
+        <section class="profiles">
+            <h2>Profiles</h2>
+            <p>Bidias Melataguia</p>
+         </section>
+        <section class="experience">
+            <h2>Expérience</h2>
+                <div class="experience-item">
+                    <h3>PPS EU</h3>
+                    <p class="sub-title">Consultant for Edenred PayTech (Student job)</p>
+                     <a href="https://www.companyweb.be/en/0712775202/pps-eu" target="_blank">https://www.companyweb.be/en/0712775202/pps-eu</a>
+                     <ul class="description">
+                        <li>Analyse des activités suspectes (SAR) et des transactions (Excel, BARN, Anytime).</li>
+                        <li>Rédaction de rapports concis.</li>
+                        <li>Gestion des emails et des tâches (Drive).</li>
+                        <li>Travail en équipe et en télétravail (Jira, Confluence).</li>
+                    </ul>
 
-        <div class="contact-info">
-            <h2>Contact</h2>
-            <p>Phone : +32 465164986</p>
-            <p>Mail : melataguiabidias@gmail.com</p>
-            <p>Linkedin :  <a href="https://www.linkedin.com/in/bidias-melataguia-199698213/" title="Visitez mon compte Linkedin">linkedin</a></p>
-            <p>Youtube :  <a href="https://www.youtube.com/@melataguiabidias5073/featured" title="Visitez mon compte Youtube">youtube</a></p>
-        </div>
+                      <p class="date">July 2023 - August 2024</p>
 
-        <h2>Carrière</h2>
-        <ul>
-            <li>
-                <strong>PPS EU</strong>
-                <p><em><b>JUILLET 2023 jusqu'à présent</b> : Consultant en Job étudiant </em></p>
-            </li>
-            <li>
-                <strong>IL Platform</strong>
-                <p><em><b>2023</b> : Professeur et animateur pour les ateliers d'introduction aux cours d'informatique et de programmation aux enfant d'âge scolaire.</em></p>
-            </li>
-            <li>
-                <strong>Scholar ULB</strong>
-                <p><em><b>2023</b> :Tuteur scholar ULB</em></p>
-            </li>
-            <li>
-                <strong>Smart It Service Sarl</strong>
-                <p><em><b>2021-2022</b> : Develloppeur Junior </em></p>
-            </li>
-            <li>
-                <strong>Salar Sarl</strong>
-                <p><em><b>JUIN 2021</b> : Stagiaire académique</em></p>
-            </li>
-            <li>
-                <strong>Hadron S.A</strong>
-                <p><em><b>JUILLET 2020</b>Stagiaire académique</em></p>
-            </li>
-            <li>
-                <strong>OMS</strong>
-                <p><em><B>OCTOBRE 2020</B> : Enqueteur LQAS (Lot_Quality_Assurance_Sampling)</em></p>
-            </li>
-            <li>
-                <strong>Dowhile Sarl</strong>
-                <p><em><b>2018-2021</b> : Directeur Technique</em></p>
-            </li>
-            <li>
-                <strong>Smart It Service Sarl</strong>
-                <p><em><b>2017-2018</b> : Assistant en maintenance informatique</em></p>
-            </li>
-        </ul>
+                 </div>
+                <div class="experience-item">
+                    <h3>Smart It Service Sarl</h3>
+                    <p class="sub-title">Junior Developer</p>
+                      <a href="https://www.smartitservicess.com/" target="_blank">https://www.smartitservicess.com/</a>
+                   <ul class="description">
+                        <li>Implémentation et maintenance des programmes.</li>
+                        <li>Développement piloté par les tests (TDD).</li>
+                        <li>Tests et déploiement des applications/bases de données.</li>
+                        <li>Rédaction de rapports techniques.</li>
+                    </ul>
+                        <p class="date">2023-2024</p>
+                </div>
+        </section>
+        <section class="education">
+            <h2>Éducation</h2>
+            <div class="education-item">
+                <h3>Université Libre de Bruxelles</h3>
+                <p class="sub-title">Master en Sciences et Technologies de l'Information et de la Communication</p>
+                <a href="https://www.ulb.be/" target="_blank">https://www.ulb.be/</a>
+                <p>Mes études portent sur les humanités numériques, la science des données, ainsi que sur des concepts de business analyst.</p>
+                  <p class="date">2022 - 2025 Master 2</p>
+            </div>
+             <div class="education-item">
+                <h3>Institut Africain d’informatique (IAI-Cameroun)</h3>
+                <p class="sub-title">ingenieur de travaux information option Génie Logiciel</p>
+                   <p class="date">2018 - 2021 Licence</p>
+            </div>
+        </section>
+        <section class="volunteering">
+            <h2>Bénévolat</h2>
+            <div class="volunteering-item">
+                  <h3>IL Platform</h3>
+                <p>Animateur d'ateliers d'introduction à l'informatique et aux cours de programmation pour les jeunes de 6 à 16 ans.</p>
 
+            </div>
+             <div class="volunteering-item">
+                  <h3>Schola ULB</h3>
+                  <p>Animateur</p>
 
-        <h2>Parcours Scolaire</h2>
-<ul>
-    <li>
-        <strong>Baccalauréat Scientifique</strong>
-        <p>Collège polyvalent Aloys Tapiemene(2009-2017)</p>
-    </li>
-    <li>
-        <strong>Certification Google des Ateliers Numériques</strong>
-        <p> Google(2022)</p>
-    </li>
-    <li>
-        <strong>Licence en Génie Logiciel avec obtention du titre d'Ingénieur de Travaux Informatiques</strong>
-        <p>Institut Africain d'Informatique (IAI, Cameroun) (2019-2021)</p>
-    </li>
-    <li>
-        <strong>Master 2 en Sciences et Technologie de l'Information et la Communication (En cours)</strong>
-        <p>Université Libre de Bruxelles (2022-2023)</p>
-    </li>
-</ul>
+            </div>
+        </section>
 
+    </main>
+    <footer>
+        <p>© 2024 Bidias MELATAGUIA</p>
+    </footer>
 
-    </div>
 </body>
 </html>
