--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV - Bidias MELATAGUIA</title>
-    <link rel="stylesheet" href="cv.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body id="theme-body">
     <header>
         <h1>Bidias MELATAGUIA</h1>
         <p class="title">Ingénieur en Informatique et Étudiant en Master STIC</p>
+         <button id="theme-toggle">Changer le thème</button>
     </header>
     <main>
         <section class="contact-info">
@@ -125,6 +126,6 @@
     <footer>
         <p>© 2024 Bidias MELATAGUIA</p>
     </footer>
-
+  <script src="script.js"></script>
 </body>
 </html>
