--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV - Bidias MELATAGUIA</title>
-    <link rel="stylesheet" href="cv.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
@@ -13,8 +13,11 @@
     <header>
         <h1>Bidias MELATAGUIA</h1>
         <p class="title">Ingénieur en Informatique et Étudiant en Master STIC</p>
-         <button id="theme-toggle">Changer le thème</button>
+        <button id="theme-toggle">Changer le thème</button>
     </header>
+    <section class="profile-image">
+        <img src="images/profile.jpg" alt="Photo de profil de Bidias MELATAGUIA">
+    </section>
     <main>
         <section class="contact-info">
             <div class="contact-item">
@@ -99,8 +102,12 @@
                 <h3>Université Libre de Bruxelles</h3>
                 <p class="sub-title">Master en Sciences et Technologies de l'Information et de la Communication</p>
                 <a href="https://www.ulb.be/" target="_blank">https://www.ulb.be/</a>
+                 <div class="education-images">
+                      <img src="images/data_science1.jpg" alt="Image de data science">
+                      <img src="images/data_science2.jpg" alt="Image de data science">
+                </div>
                 <p>Mes études portent sur les humanités numériques, la science des données, ainsi que sur des concepts de business analyst.</p>
-                  <p class="date">2022 - 2025 Master 2</p>
+                <p class="date">2022 - 2025 Master 2</p>
             </div>
              <div class="education-item">
                 <h3>Institut Africain d’informatique (IAI-Cameroun)</h3>
