--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <button id="theme-toggle">Changer le thème</button>
     </header>
     <section class="profile-image">
-        <img src="images/profile.jpg" alt="Photo de profil de Bidias MELATAGUIA">
+        <img src="images/profile.JPG" alt="Photo de profil de Bidias MELATAGUIA">
     </section>
     <main>
         <section class="contact-info">
