--- a/index.html
+++ b/index.html
@@ -4,22 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV - Bidias MELATAGUIA</title>
-    <link rel="stylesheet" href="cv.css">
+      <link rel="stylesheet" href="cv.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body id="theme-body">
-    <header>
-        <h1>Bidias MELATAGUIA</h1>
-        <p class="title">Ingénieur en Informatique et Étudiant en Master STIC</p>
-        <button id="theme-toggle">Changer le thème</button>
-    </header>
-    <section class="profile-image">
-        <img src="images/profile.JPG" alt="Photo de profil de Bidias MELATAGUIA">
-    </section>
+     <div id="header-placeholder"></div>
+
     <main>
-        <section class="contact-info">
+         <section id="accueil" class="profile-image">
+             <img src="images/profile.JPG" alt="Photo de profil de Bidias MELATAGUIA">
+        </section>
+        <section id="contact" class="contact-info">
             <div class="contact-item">
                 <span class="icon"></span> Belgique
             </div>
@@ -40,7 +37,7 @@
                 <li>Musique</li>
             </ul>
         </section>
-         <section class="certifications">
+        <section class="certifications">
             <h2>Certifications</h2>
             <div class="certification-item">
                  <div class="certification-content">
@@ -49,7 +46,6 @@
                     <a href="https://grow.google/intl/fr_fr/google-career-certificates/" target="_blank">https://grow.google/intl/fr_fr/google- career-certificates/</a>
                   </div>
              </div>
-
         </section>
          <section class="languages">
             <h2>Langues</h2>
@@ -60,16 +56,16 @@
                     <li><span>Netherlands</span>: Beginner</li>
                 </ul>
         </section>
-          <section class="profile">
+         <section class="profile">
              <p>Organisée, optimiste, déterminée, flexible, toujours souriante. Je suis jeune et passionnée par la réussite, avec une forte envie d'apprendre, de découvrir et de relever de nouveaux défis.</p>
         </section>
         <section class="profiles">
             <h2>Profiles</h2>
             <p>Bidias Melataguia</p>
          </section>
-        <section class="experience">
+        <section id="parcours-professionnel" class="experience">
             <h2>Expérience</h2>
-                <div class="experience-item">
+             <div class="experience-item">
                     <h3>PPS EU</h3>
                     <p class="sub-title">Consultant for Edenred PayTech (Student job)</p>
                      <a href="https://www.companyweb.be/en/0712775202/pps-eu" target="_blank">https://www.companyweb.be/en/0712775202/pps-eu</a>
@@ -79,60 +75,55 @@
                         <li>Gestion des emails et des tâches (Drive).</li>
                         <li>Travail en équipe et en télétravail (Jira, Confluence).</li>
                     </ul>
-
                       <p class="date">July 2023 - August 2024</p>
-
                  </div>
-                <div class="experience-item">
-                    <h3>Smart It Service Sarl</h3>
-                    <p class="sub-title">Junior Developer</p>
-                      <a href="https://www.smartitservicess.com/" target="_blank">https://www.smartitservicess.com/</a>
-                   <ul class="description">
-                        <li>Implémentation et maintenance des programmes.</li>
-                        <li>Développement piloté par les tests (TDD).</li>
-                        <li>Tests et déploiement des applications/bases de données.</li>
-                        <li>Rédaction de rapports techniques.</li>
-                    </ul>
-                        <p class="date">2023-2024</p>
-                </div>
+             <div class="experience-item">
+                <h3>Smart It Service Sarl</h3>
+                <p class="sub-title">Junior Developer</p>
+                <a href="https://www.smartitservicess.com/" target="_blank">https://www.smartitservicess.com/</a>
+                <ul class="description">
+                    <li>Implémentation et maintenance des programmes.</li>
+                    <li>Développement piloté par les tests (TDD).</li>
+                    <li>Tests et déploiement des applications/bases de données.</li>
+                    <li>Rédaction de rapports techniques.</li>
+                </ul>
+                <p class="date">2023-2024</p>
+            </div>
         </section>
-        <section class="education">
+       <section id="parcours-academique" class="education">
             <h2>Éducation</h2>
-            <div class="education-item">
+             <div class="education-item">
                 <h3>Université Libre de Bruxelles</h3>
                 <p class="sub-title">Master en Sciences et Technologies de l'Information et de la Communication</p>
                 <a href="https://www.ulb.be/" target="_blank">https://www.ulb.be/</a>
-                 <div class="education-images">
+                <div class="education-images">
                       <img src="images/data_science1.jpg" alt="Image de data science">
                       <img src="images/data_science2.jpg" alt="Image de data science">
                 </div>
                 <p>Mes études portent sur les humanités numériques, la science des données, ainsi que sur des concepts de business analyst.</p>
                 <p class="date">2022 - 2025 Master 2</p>
             </div>
-             <div class="education-item">
+            <div class="education-item">
                 <h3>Institut Africain d’informatique (IAI-Cameroun)</h3>
                 <p class="sub-title">ingenieur de travaux information option Génie Logiciel</p>
-                   <p class="date">2018 - 2021 Licence</p>
+                <p class="date">2018 - 2021 Licence</p>
             </div>
         </section>
         <section class="volunteering">
             <h2>Bénévolat</h2>
-            <div class="volunteering-item">
+             <div class="volunteering-item">
                   <h3>IL Platform</h3>
                 <p>Animateur d'ateliers d'introduction à l'informatique et aux cours de programmation pour les jeunes de 6 à 16 ans.</p>
-
-            </div>
+             </div>
              <div class="volunteering-item">
                   <h3>Schola ULB</h3>
-                  <p>Animateur</p>
-
-            </div>
+                <p>Animateur</p>
+             </div>
         </section>
-
     </main>
     <footer>
         <p>© 2024 Bidias MELATAGUIA</p>
     </footer>
-  <script src="script.js"></script>
+   <script src="script.js"></script>
 </body>
 </html>
