--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV - Bidias MELATAGUIA</title>
     <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="cv.css">
+     <link rel="stylesheet" href="cv.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
@@ -14,22 +14,25 @@
     <div id="header-placeholder"></div>
     <main>
          <section id="accueil" class="profile-image">
-             <img src="images/profile.JPG" alt="Photo de profil de Bidias MELATAGUIA">
-        </section>
+           <img src="images/profile.JPG" alt="Photo de profil de Bidias MELATAGUIA">
+                <div class="profile-name">
+                        <h1>Bidias MELATAGUIA</h1>
+                  </div>
+         </section>
         <section id="contact" class="contact-info">
-            <div class="contact-item">
-                <span class="icon"></span> Belgique
-            </div>
-            <div class="contact-item">
-                <span class="icon">☎</span> <a href="tel:+32465164986">+32465164986</a>
-            </div>
-            <div class="contact-item">
-                <span class="icon">✉</span> <a href="mailto:melataguiabidias@gmail.com">melataguiabidias@gmail.com</a>
-            </div>
-             <div class="contact-item">
-               <span class="icon"></span>  <a href="https://memoire-bidias.be/" target="_blank">https://memoire-bidias.be/</a>
-            </div>
-        </section>
+                <div class="contact-item">
+                    <span class="icon"></span> Belgique
+                </div>
+                <div class="contact-item">
+                    <span class="icon">☎</span> <a href="tel:+32465164986">+32465164986</a>
+                </div>
+                <div class="contact-item">
+                    <span class="icon">✉</span> <a href="mailto:melataguiabidias@gmail.com">melataguiabidias@gmail.com</a>
+                </div>
+                 <div class="contact-item">
+                   <span class="icon"></span>  <a href="https://memoire-bidias.be/" target="_blank">https://memoire-bidias.be/</a>
+                </div>
+            </section>
         <section class="interests">
             <h2>Intérêts</h2>
             <ul>
@@ -37,7 +40,7 @@
                 <li>Musique</li>
             </ul>
         </section>
-        <section class="certifications">
+         <section class="certifications">
             <h2>Certifications</h2>
             <div class="certification-item">
                  <div class="certification-content">
@@ -46,6 +49,7 @@
                     <a href="https://grow.google/intl/fr_fr/google-career-certificates/" target="_blank">https://grow.google/intl/fr_fr/google- career-certificates/</a>
                   </div>
              </div>
+
         </section>
          <section class="languages">
             <h2>Langues</h2>
@@ -56,7 +60,7 @@
                     <li><span>Netherlands</span>: Beginner</li>
                 </ul>
         </section>
-         <section class="profile">
+          <section class="profile">
              <p>Organisée, optimiste, déterminée, flexible, toujours souriante. Je suis jeune et passionnée par la réussite, avec une forte envie d'apprendre, de découvrir et de relever de nouveaux défis.</p>
         </section>
         <section class="profiles">
