--- a/header.html
+++ b/header.html
@@ -13,7 +13,7 @@
   <header class="header">
     <div class="container">
         <div class="logo">
-             <h1>Bidias MELATAGUIA</h1>
+             <h1>CV – Data Scientist</h1>
         </div>
       <nav class="main-nav">
           <ul>
