--- a/header.html
+++ b/header.html
@@ -15,7 +15,10 @@
         <div class="logo">
              <h1>CV – Data Scientist</h1>
         </div>
-      <nav class="main-nav">
+       <button class="nav-toggle" aria-label="toggle navigation">
+            <span class="hamburger"></span>
+        </button>
+        <nav class="main-nav">
           <ul>
             <li><a href="#accueil">Accueil</a></li>
             <li><a href="#parcours-academique">Parcours Académique</a></li>
