--- a/header.html
+++ b/header.html
@@ -5,31 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Header - CV Bidias MELATAGUIA</title>
     <link rel="stylesheet" href="header.css">
-     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
   <header class="header">
-    <div class="container">
-        <div class="logo">
-             <h1>CV – Data Scientist</h1>
-        </div>
-       <button class="nav-toggle" aria-label="toggle navigation">
-            <span class="hamburger"></span>
-        </button>
-        <nav class="main-nav">
-          <ul>
-            <li><a href="#accueil">Accueil</a></li>
-            <li><a href="#parcours-academique">Parcours Académique</a></li>
-            <li><a href="#parcours-professionnel">Parcours Professionnel</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-      </nav>
-       <button id="theme-toggle">Changer le thème</button>
-    </div>
+       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+                 <a class="navbar-brand" href="#">CV – Data Scientist</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item"><a class="nav-link" href="#accueil">Accueil</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#parcours-academique">Parcours Académique</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#parcours-professionnel">Parcours Professionnel</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+            <button id="theme-toggle" class="ml-3">Changer le thème</button>
+            </div>
+        </nav>
   </header>
 
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="header.js"></script>
 </body>
 </html>
